--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css">
     
-    <title>Document</title>
+    <title>Hassan Ayyoob</title>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 
     <img src="images/me.jpg" alt="Picture of Hassan" class="center"
             width = "150"
-            height="100">
+            height="100" >
     <h1>Hassan Ayyoob</h1>
     <p class = "intro">I am currently taking part in a 12 week bootcamp for Software Engineering with <a href="https://skills-city.com" target="_blank">Skills City</a></p>
     
